# rnnlib

./: .gitignore  AUTHORS  CMakeLists.txt  Makefile.in  ORIGINAL_README  README.md  configure  configure.ac  rnnlib_kdevelop.kdevelop.filelist
CMake/Modules/: FindBLAS.cmake  FindNetCDF.cmake
examples/arabic_offline_handwriting/: arabic_offline.nc  transcription.config
examples/iam_words_offline_handwriting/: test.lst  test1.nc  test2.nc  train.lst  train1.nc  transcription.config  transcription1.config  transcription2.config
ide/rnnlib_kdevelop/: rnnlib_kdevelop.kdevelop
ide/rnnlib_xcode/: rnnlib_xcode.1
ide/rnnlib_xcode/rnnlib_xcode.xcodeproj/: project.pbxproj
src/: ActivationFunctions.hpp  BiasLayer.hpp  BlockLayer.hpp  ClassificationLayer.hpp  CollapseLayer.hpp  Container.hpp  CopyConnection.hpp  DataExporter.cpp  DataExporter.hpp  DataSequence.hpp  DatasetErrors.hpp  FullConnection.hpp  GatherLayer.hpp  GradientCheck.hpp  Helpers.hpp  IdentityLayer.hpp  InputLayer.hpp  Layer.hpp  LstmLayer.hpp  Main.cpp  Makefile.am  Makefile.in  Matrix.hpp  Mdrnn.hpp  MultilayerNet.hpp  NetcdfDataset.hpp  NeuronLayer.hpp  Optimiser.hpp  Rprop.hpp  SeqBuffer.hpp  SoftmaxLayer.hpp  SteepestDescent.hpp  Trainer.hpp  TranscriptionLayer.hpp  WeightContainer.hpp
utils/: normalise_netcdf.py  normalise_netcdf.sh  pgm2netcdf
